@@ -15,6 +15,7 @@
         <news>
 2.3.5
 [fix] utf-8 file paths
+[fix] perpetual busy dialogs in Kodi 18
 
 2.3.4
 [fix] clean_title_value UnicodeDecodeError
