@@ -84,8 +84,6 @@ FANART = kodi.get_fanart()
 
 ADAPTIVE_SOURCE_TEMPLATE = {'id': 'hls', 'name': 'Adaptive', 'bandwidth': -1, 'url': ''}
 
-REFRESH_SCRIPT = 'special://home/addons/plugin.video.twitch/resources/lib/twitch_addon/refresh.py'
-
 CLIENT_ID = 'NjdlYnBmaHlvaWNhYjVrcjB5N3B6b2NzZm9oczd0eQ=='
 REDIRECT_URI = 'https://mrsprigster.github.io/Twitch-on-Kodi/token/'
 
@@ -191,6 +189,10 @@ class Keys:
     VIEWS = 'views'
     VOD = 'vod'
     VODS = 'vods'
+
+
+class Scripts:
+    REFRESH = 'special://home/addons/plugin.video.twitch/resources/lib/twitch_addon/refresh.py'
 
 
 SCOPES = [scopes.user_read, scopes.user_follows_edit, scopes.user_subscriptions, scopes.chat_login]
