@@ -19,7 +19,7 @@
 
 from . import utils
 from .common import kodi
-from .constants import MODES, REFRESH_SCRIPT
+from .constants import MODES, Scripts
 
 i18n = utils.i18n
 
@@ -64,39 +64,39 @@ def go_to_game(game):
 
 
 def refresh():
-    return [(i18n('refresh'), 'RunScript(%s)' % REFRESH_SCRIPT)]
+    return [(i18n('refresh'), 'RunScript(%s)' % Scripts.REFRESH)]
 
 
 def edit_follow(channel_id, display_name):
-    return update_container(i18n('toggle_follow'), {'mode': MODES.EDITFOLLOW, 'channel_id': channel_id, 'channel_name': display_name})
+    return run_plugin(i18n('toggle_follow'), {'mode': MODES.EDITFOLLOW, 'channel_id': channel_id, 'channel_name': display_name})
 
 
 def edit_block(target_id, display_name):
-    return update_container(i18n('toggle_block'), {'mode': MODES.EDITBLOCK, 'target_id': target_id, 'name': display_name})
+    return run_plugin(i18n('toggle_block'), {'mode': MODES.EDITBLOCK, 'target_id': target_id, 'name': display_name})
 
 
 def add_blacklist(target_id, display_name, list_type='user'):
-    return update_container(i18n('add_blacklist') % ''.join(['[COLOR=white][B]', display_name, '[/B][/COLOR]']),
-                            {'mode': MODES.EDITBLACKLIST, 'target_id': target_id, 'name': display_name, 'list_type': list_type})
+    return run_plugin(i18n('add_blacklist') % ''.join(['[COLOR=white][B]', display_name, '[/B][/COLOR]']),
+                      {'mode': MODES.EDITBLACKLIST, 'target_id': target_id, 'name': display_name, 'list_type': list_type, 'refresh': True})
 
 
 def set_default_quality(content_type, target_id, name, video_id=None, clip_id=None):
-    return update_container(i18n('set_default_quality'),
-                            {'mode': MODES.EDITQUALITIES, 'content_type': content_type, 'target_id': target_id,
-                             'name': name, 'video_id': video_id, 'clip_id': clip_id})
+    return run_plugin(i18n('set_default_quality'),
+                      {'mode': MODES.EDITQUALITIES, 'content_type': content_type, 'target_id': target_id,
+                       'name': name, 'video_id': video_id, 'clip_id': clip_id})
 
 
 def edit_follow_game(game):
-    return update_container(i18n('toggle_follow'), {'mode': MODES.EDITFOLLOW, 'game': game})
+    return run_plugin(i18n('toggle_follow'), {'mode': MODES.EDITFOLLOW, 'game': game})
 
 
 def change_sort_by(for_type):
-    return update_container(i18n('change_sort_by'), {'mode': MODES.EDITSORTING, 'list_type': for_type, 'sort_type': 'by'})
+    return run_plugin(i18n('change_sort_by'), {'mode': MODES.EDITSORTING, 'list_type': for_type, 'sort_type': 'by'})
 
 
 def change_period(for_type):
-    return update_container(i18n('change_period'), {'mode': MODES.EDITSORTING, 'list_type': for_type, 'sort_type': 'period'})
+    return run_plugin(i18n('change_period'), {'mode': MODES.EDITSORTING, 'list_type': for_type, 'sort_type': 'period'})
 
 
 def change_direction(for_type):
-    return update_container(i18n('change_direction'), {'mode': MODES.EDITSORTING, 'list_type': for_type, 'sort_type': 'direction'})
+    return run_plugin(i18n('change_direction'), {'mode': MODES.EDITSORTING, 'list_type': for_type, 'sort_type': 'direction'})
