@@ -1,10 +1,11 @@
 # -*- coding: utf-8 -*-
 from ..addon import utils
 from ..addon.common import kodi
+from ..addon.constants import Scripts
 from ..addon.utils import i18n
 
 
-def route(list_type='user', target_id=None, name=None, remove=False):
+def route(list_type='user', target_id=None, name=None, remove=False, refresh=False):
     if not remove:
         if not target_id or not name: return
         if kodi.get_setting('blacklist_confirm_toggle') == 'true':
@@ -19,3 +20,6 @@ def route(list_type='user', target_id=None, name=None, remove=False):
         result = utils.remove_blacklist(list_type)
         if result:
             kodi.notify(msg=i18n('removed_from_blacklist') % result[1], sound=False)
+
+    if refresh:
+        kodi.execute_builtin('RunScript(%s)' % Scripts.REFRESH)
