@@ -1,5 +1,6 @@
 # -*- coding: utf-8 -*-
 from ..addon.common import kodi
+from ..addon.constants import Scripts
 from ..addon.utils import i18n
 
 
@@ -33,3 +34,4 @@ def route(api, channel_id=None, channel_name=None, game=None):
             else:
                 result = api.follow_game(game)
             kodi.notify(msg=i18n('now_following') % display_name, sound=False)
+    kodi.execute_builtin('RunScript(%s)' % Scripts.REFRESH)
