@@ -1,8 +1,8 @@
 # -*- coding: utf-8 -*-
 from ..addon.common import kodi
-from ..addon.constants import REFRESH_SCRIPT
+from ..addon.constants import Scripts
 
 
 def route():
-    kodi.execute_builtin('RunScript(%s)' % REFRESH_SCRIPT)
+    kodi.execute_builtin('RunScript(%s)' % Scripts.REFRESH)
 
