@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 from ..addon import utils
 from ..addon.common import kodi
-from ..addon.constants import REFRESH_SCRIPT
+from ..addon.constants import Scripts
 from ..addon.utils import i18n
 
 
@@ -14,4 +14,4 @@ def route(search_type, query, refresh=True):
             history.remove(query)
             kodi.notify(msg=i18n('removed_from_search_history') % query_label, sound=False)
             if refresh:
-                kodi.execute_builtin('RunScript(%s)' % REFRESH_SCRIPT)
+                kodi.execute_builtin('RunScript(%s)' % Scripts.REFRESH)
